# chie

./: Cargo.toml  README.md  config.example  install.ps1  install.sh
.github/workflows/: ci.yml
examples/: tour.uni
src/: about.rs  buffer.rs  config.rs  editor.rs  main.rs  theme.rs  width.rs
src/highlight/: generic.rs  mod.rs  python.rs  uniland.rs
