[package]
name = "chie"
version = "0.1.0"
edition = "2021"
authors = ["moyunni"]
description = "chie — a nano killer terminal editor with first-class UniLand syntax highlighting"
license = "MIT"
repository = "https://codeberg.org/moyunni/chie"
readme = "README.md"
keywords = ["editor", "nano", "tui", "uniland", "terminal"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "chie"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
